// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useTradeQuotePolling() When wallet is NOT connected Then the "receiver" field in the quote request should be undefined 1`] = `
{
  "account": "0xD711bD26Bf5B153001a7C0ACcb289782b6f775e9",
  "amount": 10000000n,
  "appCode": "CoW Swap",
  "buyTokenAddress": "0x0625aFB445C3B6B7B929342a04A22599fd5dBB59",
  "buyTokenChainId": 11155111,
  "buyTokenDecimals": 18,
  "ethFlowContractOverride": {
    "1": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "100": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "11155111": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "137": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "42161": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "43114": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "56": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "57073": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "59144": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "8453": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "9745": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
  },
  "kind": "sell",
  "owner": "0xD711bD26Bf5B153001a7C0ACcb289782b6f775e9",
  "partiallyFillable": false,
  "receiver": undefined,
  "sellTokenAddress": "0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14",
  "sellTokenChainId": 11155111,
  "sellTokenDecimals": 18,
  "validFor": 1800,
}
`;

exports[`useTradeQuotePolling() When wallet is connected Then should put account address into "receiver" field in the quote request 1`] = `
[
  {
    "account": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "amount": 10000000n,
    "appCode": "CoW Swap",
    "bridgeRecipient": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "buyTokenAddress": "0x0625aFB445C3B6B7B929342a04A22599fd5dBB59",
    "buyTokenChainId": 11155111,
    "buyTokenDecimals": 18,
    "ethFlowContractOverride": {
      "1": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "100": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "11155111": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "137": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "42161": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "43114": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "56": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "57073": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "59144": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "8453": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "9745": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    },
    "kind": "sell",
    "owner": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "partiallyFillable": false,
    "receiver": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "sellTokenAddress": "0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14",
    "sellTokenChainId": 11155111,
    "sellTokenDecimals": 18,
    "signer": {
      "address": "0xD711bD26Bf5B153001a7C0ACcb289782b6f775e9",
      "getAddress": [Function],
      "nonceManager": undefined,
      "publicKey": "0x04e08d5acfd3225da0cb2b0a781991200cb4dae9f02fe63394ddf5dc592643e572224c8172a2373fdfb3f6b034d10fbd91a3462d56f8d09a5df8e1fb6c02b0c98d",
      "sign": [Function],
      "signAuthorization": [Function],
      "signMessage": [Function],
      "signTransaction": [Function],
      "signTypedData": [Function],
      "source": "privateKey",
      "type": "local",
    },
    "validFor": 1800,
  },
  {
    "appData": undefined,
    "getCorrelatedTokens": [Function],
    "getSlippageSuggestion": undefined,
    "quoteRequest": {
      "priceQuality": "optimal",
    },
    "quoteSigner": undefined,
  },
]
`;
